# UI_esp32

./: .gitignore  component.cmake  component.mk  esp-azure
components/boards/: CMakeLists.txt  Kconfig.projbuild  component.mk
components/boards/lavazza-3_5/: Kconfig.in  board.c  board.h
components/boards/lavazza-4_3/: Kconfig.in  board.c  board.h
firmware/main/: CMakeLists.txt  Kconfig.projbuild
firmware/main/icon/: esp_logo.c  lavazza_logo.c
firmware/main/inc/: types.h  variables.h  version.h
firmware/main/inc/camera/: camera_protocol.h  camera_task.h
firmware/main/inc/connectivity/: azure_api.h  azure_task.h  ca_certificates.h  lavazza_cloud_protocol.h  ota.h  provisioning_webserver.h  wifi_task.h
firmware/main/inc/dbg/: ElogyMilk.h  NR_OCS.h  dbg_protocol.h  dbg_task.h
firmware/main/inc/gui/: defines_3_5.h  defines_4_3.h  gui_task.h  lv_port_fs.h  lvgl_port.h  string_it.h  ui_main.h
firmware/main/inc/utils/: converter_utils.h  spiffs_utils.h  system_utils.h  utils.h
firmware/main/include/: lvgl_port.h  sys_check.h  ui_main.h
firmware/main/lv_fonts/: font_all_20.c  font_clock_108.c  font_clock_32.c  font_en_18.c  font_en_20.c  font_en_24.c  font_en_28.c  font_en_32.c  font_en_36.c  font_en_40.c  font_en_48.c  font_en_bold_16.c  font_en_bold_20.c  font_en_bold_24.c  font_en_bold_28.c  font_en_bold_32.c  font_en_bold_36.c  font_en_bold_40.c  font_en_bold_48.c  font_en_bold_60.c  font_en_bold_64.c  font_en_bold_72.c  font_en_thin_20.c  font_en_thin_24.c  font_en_thin_28.c  font_kb_24.c
firmware/main/resources/: index.html  menu.html
firmware/main/src/: lv_port_fs.c  lvgl_port.c  main.c  main.cpp
firmware/main/src/camera/: camera_protocol.cpp  camera_task.cpp
firmware/main/src/connectivity/: azure_api.cpp  azure_task.cpp  custom_hsm_x509.cpp  lavazza_cloud_protocol.cpp  ota.cpp  provisioning_webserver.cpp  wifi_task.cpp
firmware/main/src/dbg/: dbg_protocol.cpp  dbg_task.cpp
firmware/main/src/gui/: gui_task.cpp  lv_port_fs.c  lvgl_port.c  sys_check.c  ui_auto_cleaning.cpp  ui_descaling.cpp  ui_erogation.cpp  ui_fast_cleaning.cpp  ui_fault.cpp  ui_full_cleaning.c  ui_full_cleaning.cpp  ui_main.c  ui_main.cpp  ui_menu.cpp  ui_menu_bar.cpp  ui_page.c  ui_page.cpp  (+12 more)
(+46 files in other folders)
